Fix position sticky truncating second page on PDF

--- a/styles-v2.css
+++ b/styles-v2.css
@@ -1727,6 +1727,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
 
   .app-inputs, .results-panel {
     width: 100% !important;
+    position: static !important;
+    height: auto !important;
   }
 
   /* Cards */
